tests/extensions/enhanced_assignments/semanticErr/badIdentMod.wacc
begin
    i %= 3
end